--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 
 <body>
     <div class="wrap">
-        <div class="header">
-            <div class="header-navbar">
-                <div class="myNavbar-content">
-                    <div class="myNavbar-logo"></div>
+        <div class="khoi1">
+            <div class="container">
+                <div class="header">
+                    <div class="header-logo">
+                        <img src="image/Logo_TheGem.png" alt="TheGem">
+                    </div>
 
-                    <div class="myNavbar-menu">
+                    <div class="header-menu">
                         <ul>
                             <li><a href="#">HOME</a></li>
                             <li><a href="#">PAGES</a></li>
@@ -29,21 +31,23 @@
                         </ul>
                     </div>
 
-                    <div class="myNavbar-item">
+                    <div class="header-icon">
                         <ul>
                             <li>
                                 <a class="item" href="#"><img src="image/flag.png"></a>
                             </li>
                             <li><a class="item" href="#"><i class="fas fa-search"></i></a></li>
                             <li>
-                                <a class="item" href="#"><img src="image/cart.png"><img src="image/add.png"></a>
+                                <a class="item" href="#"><img src="image/cart.png">
+                                    <div class="add">4</div>
+                                </a>
                             </li>
                         </ul>
                     </div>
                 </div>
 
 
-                <div class="header-slider">
+                <div class="slider">
                     <div class="slider-menu"><img src="image/slider-menu.png">
                     </div>
 
@@ -56,25 +60,27 @@
                     </div>
 
                     <div class="slider-button">
-                        <div class="button-purchase rounded">PURRCHASE NOW</div>
-                        <div class="button-details rounded">MORE DETAILS</div>
+
+                        <a href="#" class="button-pur">PURRCHASE NOW</a>
+                        <a href="#" class="button-pur">MORE DETAILS
+                        </a>
                     </div>
                 </div>
 
             </div>
         </div>
 
-
-        <div class="container">
-            <div class="titledark">
-                <div class="title-caption">LOREM <span class="text">IPSUM</span></div>
-                <div class="title-sub">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Sed ut perspiciatis unde
-                    omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-                    sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius
-                    modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit
+        <div class="khoi2">
+            <div class="container">
+                <div class="titledark">
+                    <div class="title-caption">LOREM <span class="text">IPSUM</span></div>
+                    <div class="title-sub">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Sed ut perspiciatis
+                        unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, 4mtotam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
+                        voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non
+                        numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit
+                    </div>
                 </div>
-            </div>
 
                 <!--Start Pricing Table 1-->
                 <div class="table1">
@@ -82,22 +88,24 @@
                         <div class="table-title">
                             BEGINNER
                         </div>
-                        <div class="price cbg">
+                        <div class="price begin-bg">
                             <p class="font65">$10</p>
                             <p class="font16">Per Month</p>
                         </div>
-                        <div class="subtitle">
+                        <div class="subtitle border-sub">
                         </div>
 
-                        <div class="content-sub">
-                            <p class="font-c">Drop out ramen hustle</p>
-                            <p class="font-c">Coworking viral landing</p>
-                            <p class="font-del">crush revenue traction</p>
-                            <p class="font-del">user base minimum viable</p>
-                            <p class="font-del">lorem ipsum dolor</p>
+                        <div class="content-sub border-sub">
+                            <ul>
+                                <li class="font-c">Drop out ramen hustle</li>
+                                <li class="font-c">Coworking viral landing</li>
+                                <li class="font-del">crush revenue traction</li>
+                                <li class="font-del">user base minimum viable</li>
+                                <li class="font-del">lorem ipsum dolor</li>
+                            </ul>
                         </div>
-                        <div class="button">
-                            <a class="button-tyle1" href="#"><i class="fas fa-caret-right"></i>ORDER</a>
+                        <div class="table-button">
+                            <a class="button-tyle1" href="#"><i class="fas fa-caret-right"></i> ORDER</a>
                         </div>
                     </div>
 
@@ -106,22 +114,24 @@
                         <div class="table-title">
                             ADVANCED
                         </div>
-                        <div class="price avbg">
+                        <div class="price advan-bg">
                             <p class="font65">$45</p>
                             <p class="font16">Per Month</p>
                         </div>
-                        <div class="subtitle">
+                        <div class="subtitle border-sub">
                         </div>
 
-                        <div class="content-sub">
-                            <p class="font-c">Drop out ramen hustle</p>
-                            <p class="font-c">Coworking viral landing</p>
-                            <p class="font-del">crush revenue traction</p>
-                            <p class="font-del">user base minimum viable</p>
-                            <p class="font-del">lorem ipsum dolor</p>
+                        <div class="content-sub border-sub">
+                            <ul>
+                                <li class="font-c">Drop out ramen hustle</li>
+                                <li class="font-c">Coworking viral landing</li>
+                                <li class="font-del">crush revenue traction</li>
+                                <li class="font-del">user base minimum viable</li>
+                                <li class="font-del">lorem ipsum dolor</li>
+                            </ul>
                         </div>
-                        <div class="button">
-                            <a class="button-tyle1" href="#"><i class="fas fa-caret-right"></i>ORDER</a>
+                        <div class="table-button">
+                            <a class="button-tyle1" href="#"><i class="fas fa-caret-right"></i> ORDER</a>
                         </div>
                     </div>
 
@@ -132,24 +142,26 @@
                             <p class="table-title1">MASTER</p>
                             <p class="senten">The best price/quanlity plan*</p>
                         </div>
-                        <div class="price mtbg">
+                        <div class="price master-bg">
                             <p class="font65">$249</p>
                             <p class="font16">Per Month</p>
                         </div>
-                        <div class="subtitle">
+                        <div class="subtitle border-sub">
                             <p class="sub">Subtitle Goes Here</p>
                             <p class="senten">Subtitle second line goes here</p>
                         </div>
 
-                        <div class="content-sub">
-                            <p class="font-c">Drop out ramen hustle</p>
-                            <p class="font-c">Coworking viral landing</p>
-                            <p class="font-del">Crush revenue traction</p>
-                            <p class="font-del">User base minimum viable</p>
-                            <p class="font-del">Lorem ipsum dolor</p>
+                        <div class="content-sub border-sub">
+                            <ul>
+                                <li class="font-c">Drop out ramen hustle</li>
+                                <li class="font-c">Coworking viral landing</li>
+                                <li class="font-del">crush revenue traction</li>
+                                <li class="font-del">user base minimum viable</li>
+                                <li class="font-del">lorem ipsum dolor</li>
+                            </ul>
                         </div>
-                        <div class="button">
-                            <a class="button-tyle1" href="#"><i class="fas fa-caret-right"></i>ORDER</a>
+                        <div class="table-button">
+                            <a class="button-tyle1" href="#"><i class="fas fa-caret-right"></i> ORDER</a>
                         </div>
                     </div>
 
@@ -158,36 +170,32 @@
                         <div class="table-title">
                             INSANE
                         </div>
-                        <div class="price isbg">
+                        <div class="price isane-bg">
                             <p class="font65">$1399</p>
                             <p class="font16">Per Month</p>
                         </div>
-                        <div class="subtitle">
+                        <div class="subtitle border-sub">
                         </div>
 
-                        <div class="content-sub">
-                            <p class="font-c">Drop out ramen hustle</p>
-                            <p class="font-c">Coworking viral landing</p>
-                            <p class="font-del">crush revenue traction</p>
-                            <p class="font-del">user base minimum viable</p>
-                            <p class="font-del">lorem ipsum dolor</p>
+                        <div class="content-sub border-sub">
+                            <ul>
+                                <li class="font-c">Drop out ramen hustle</li>
+                                <li class="font-c">Coworking viral landing</li>
+                                <li class="font-del">crush revenue traction</li>
+                                <li class="font-del">user base minimum viable</li>
+                                <li class="font-del">lorem ipsum dolor</li>
+                            </ul>
                         </div>
-                        <div class="button">
-                            <a class="button-tyle1" href="#"><i class="fas fa-caret-right"></i>ORDER</a>
+                        <div class="table-button">
+                            <a class="button-tyle1" href="#"><i class="fas fa-caret-right"></i> ORDER</a>
                         </div>
                     </div>
 
                 </div>
-
-
-                <!--End Pricing Table 1-->
-                
-                <div class="nen-vb">
-                    Phần tiếp theo  (^_^)!!
-                </div>
-
             </div>
         </div>
     </div>
+    </div>
 </body>
+
 </html>
