--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <li><a class="item" href="#"><i class="fas fa-search"></i></a></li>
                             <li>
                                 <a class="item" href="#"><img src="image/cart.png">
-                                    <div class="add">4</div>
+                                <div class="add"><span class="cata">50</span></div>
                                 </a>
                             </li>
                         </ul>
