--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <li><a class="item" href="#"><i class="fas fa-search"></i></a></li>
                             <li>
                                 <a class="item" href="#"><img src="image/cart.png">
-                                <div class="add"><span class="cata">50</span></div>
+                                <div class="add"><span id="cata">50</span></div>
                                 </a>
                             </li>
                         </ul>
@@ -73,7 +73,7 @@
         <div class="khoi2">
             <div class="container">
                 <div class="titledark">
-                    <div class="title-caption">LOREM <span class="text">IPSUM</span></div>
+                    <div class="title-caption1">LOREM <span class="title-caption2">IPSUM</span></div>
                     <div class="title-sub">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Sed ut perspiciatis
                         unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, 4mtotam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
@@ -86,7 +86,7 @@
                 <div class="table1">
                     <div class="block-1">
                         <div class="table-title">
-                            BEGINNER
+                           <p class="table-title1">BEGINNER</p>
                         </div>
                         <div class="price begin-bg">
                             <p class="font65">$10</p>
@@ -112,7 +112,7 @@
 
                     <div class="block-1">
                         <div class="table-title">
-                            ADVANCED
+                            <p class="table-title1">ADVANCED</p>
                         </div>
                         <div class="price advan-bg">
                             <p class="font65">$45</p>
@@ -137,8 +137,8 @@
 
 
                     <div class="block-1">
-                        <img class="new-icon" src="image/new-icon.png">
                         <div class="table-title">
+                            <img class="new-icon" src="image/new-icon.png">
                             <p class="table-title1">MASTER</p>
                             <p class="senten">The best price/quanlity plan*</p>
                         </div>
@@ -168,7 +168,7 @@
 
                     <div class="block-1">
                         <div class="table-title">
-                            INSANE
+                            <p class="table-title1">INSANE</p>
                         </div>
                         <div class="price isane-bg">
                             <p class="font65">$1399</p>
