toi uu lại code css

--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="css/PriceTable.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+
+     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700&display=swap&subset=vietnamese" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700&display=swap&subset=vietnamese" rel="stylesheet">
+
 </head>
-
-
 <body>
     <div class="wrap">
-        <div class="khoi1">
+        <div class="gare1">
             <div class="container">
                 <div class="header">
                     <div class="header-logo">
@@ -36,10 +39,11 @@
                             <li>
                                 <a class="item" href="#"><img src="image/flag.png"></a>
                             </li>
-                            <li><a class="item" href="#"><i class="fas fa-search"></i></a></li>
+                            <li><a class="item" href="#">
+                                <img src="image/search.png"></a></li>
                             <li>
                                 <a class="item" href="#"><img src="image/cart.png">
-                                <div class="add"><span id="cata">50</span></div>
+                                <div class="add"><p id="add-number">2</p></div>
                                 </a>
                             </li>
                         </ul>
@@ -68,9 +72,9 @@
                 </div>
 
             </div>
-        </div>
+        </div> 
 
-        <div class="khoi2">
+        <div class="gare2">
             <div class="container">
                 <div class="titledark">
                     <div class="title-caption1">LOREM <span class="title-caption2">IPSUM</span></div>
@@ -90,22 +94,22 @@
                         </div>
                         <div class="price begin-bg">
                             <p class="font65">$10</p>
-                            <p class="font16">Per Month</p>
+                            <p>Per Month</p>
                         </div>
                         <div class="subtitle border-sub">
                         </div>
 
                         <div class="content-sub border-sub">
                             <ul>
-                                <li class="font-c">Drop out ramen hustle</li>
-                                <li class="font-c">Coworking viral landing</li>
-                                <li class="font-del">crush revenue traction</li>
-                                <li class="font-del">user base minimum viable</li>
-                                <li class="font-del">lorem ipsum dolor</li>
+                                <li>Drop out ramen hustle</li>
+                                <li>Coworking viral landing</li>
+                                <li><del>crush revenue traction</del></li>
+                                <li><del>user base minimum viable</del></li>
+                                <li ><del>lorem ipsum dolor</del></li>
                             </ul>
                         </div>
                         <div class="table-button">
-                            <a class="button-tyle1" href="#"><i class="fas fa-caret-right"></i> ORDER</a>
+                            <a class="button button-tyle1" href="#"><i class="fas fa-caret-right"></i> ORDER</a>
                         </div>
                     </div>
 
@@ -116,22 +120,22 @@
                         </div>
                         <div class="price advan-bg">
                             <p class="font65">$45</p>
-                            <p class="font16">Per Month</p>
+                            <p>Per Month</p>
                         </div>
                         <div class="subtitle border-sub">
                         </div>
 
-                        <div class="content-sub border-sub">
+                        <div class="content-sub">
                             <ul>
-                                <li class="font-c">Drop out ramen hustle</li>
-                                <li class="font-c">Coworking viral landing</li>
-                                <li class="font-del">crush revenue traction</li>
-                                <li class="font-del">user base minimum viable</li>
-                                <li class="font-del">lorem ipsum dolor</li>
+                                <li>Drop out ramen hustle</li>
+                                <li>Coworking viral landing</li>
+                                <li><del>crush revenue traction</del></li>
+                                <li><del>user base minimum viable</del></li>
+                                <li><del>lorem ipsum dolor</del></li>
                             </ul>
                         </div>
                         <div class="table-button">
-                            <a class="button-tyle1" href="#"><i class="fas fa-caret-right"></i> ORDER</a>
+                            <a class="button button-tyle1" href="#"><i class="fas fa-caret-right"></i> ORDER</a>
                         </div>
                     </div>
 
@@ -144,24 +148,24 @@
                         </div>
                         <div class="price master-bg">
                             <p class="font65">$249</p>
-                            <p class="font16">Per Month</p>
-                        </div>
-                        <div class="subtitle border-sub">
+                            <p>Per Month</p>
+                        </div>                       
+                         <div class="subtitle border-sub">
                             <p class="sub">Subtitle Goes Here</p>
                             <p class="senten">Subtitle second line goes here</p>
                         </div>
 
                         <div class="content-sub border-sub">
                             <ul>
-                                <li class="font-c">Drop out ramen hustle</li>
-                                <li class="font-c">Coworking viral landing</li>
-                                <li class="font-del">crush revenue traction</li>
-                                <li class="font-del">user base minimum viable</li>
-                                <li class="font-del">lorem ipsum dolor</li>
+                                <li>Drop out ramen hustle</li>
+                                <li>Coworking viral landing</li>
+                                <li><del>crush revenue traction</del></li>
+                                <li><del>user base minimum viable</del></li>
+                                <li><del>lorem ipsum dolor</del></li>
                             </ul>
                         </div>
                         <div class="table-button">
-                            <a class="button-tyle1" href="#"><i class="fas fa-caret-right"></i> ORDER</a>
+                            <a class="button button-tyle1" href="#"><i class="fas fa-caret-right"></i> ORDER</a>
                         </div>
                     </div>
 
@@ -172,30 +176,27 @@
                         </div>
                         <div class="price isane-bg">
                             <p class="font65">$1399</p>
-                            <p class="font16">Per Month</p>
+                            <p>Per Month</p>
                         </div>
                         <div class="subtitle border-sub">
                         </div>
 
                         <div class="content-sub border-sub">
                             <ul>
-                                <li class="font-c">Drop out ramen hustle</li>
-                                <li class="font-c">Coworking viral landing</li>
-                                <li class="font-del">crush revenue traction</li>
-                                <li class="font-del">user base minimum viable</li>
-                                <li class="font-del">lorem ipsum dolor</li>
+                                <li>Drop out ramen hustle</li>
+                                <li>Coworking viral landing</li>
+                                <li><del>crush revenue traction</del></li>
+                                <li><del>user base minimum viable</del></li>
+                                <li><del>lorem ipsum dolor</del></li>
                             </ul>
                         </div>
                         <div class="table-button">
-                            <a class="button-tyle1" href="#"><i class="fas fa-caret-right"></i> ORDER</a>
+                            <a class="button button-tyle1" href="#"><i class="fas fa-caret-right"></i> ORDER</a>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
     </div>
-    </div>
-</body>
-
+</body> 
 </html>
