tối ưu lại font chữ

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <img src="image/Logo_TheGem.png" alt="TheGem">
                     </div>
 
-                    <div class="header-menu">
+                    <div class="header-menu montserrat">
                         <ul>
                             <li><a href="#">HOME</a></li>
                             <li><a href="#">PAGES</a></li>
@@ -55,8 +55,8 @@
                     <div class="slider-menu"><img src="image/slider-menu.png">
                     </div>
 
-                    <div class="slider-caption">
-                        <p>PRICING <span class="caption"> TABLES</span></p>
+                    <div class="slider-caption montserrat">
+                        <p>PRICING <span class="caption montserrat"> TABLES</span></p>
                     </div>
 
                     <div class="slider-content">
@@ -64,9 +64,8 @@
                     </div>
 
                     <div class="slider-button">
-
-                        <a href="#" class="button-pur">PURRCHASE NOW</a>
-                        <a href="#" class="button-pur">MORE DETAILS
+                        <a href="#" class="button-pur montserrat">PURRCHASE NOW</a>
+                        <a href="#" class="button-pur montserrat">MORE DETAILS
                         </a>
                     </div>
                 </div>
@@ -76,7 +75,7 @@
 
         <div class="gare2">
             <div class="container">
-                <div class="titledark">
+                <div class="titledark montserrat">
                     <div class="title-caption1">LOREM <span class="title-caption2">IPSUM</span></div>
                     <div class="title-sub">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Sed ut perspiciatis
@@ -90,10 +89,10 @@
                 <div class="table1">
                     <div class="block-1">
                         <div class="table-title">
-                           <p class="table-title1">BEGINNER</p>
+                           <p class="table-title1 montserrat">BEGINNER</p>
                         </div>
                         <div class="price begin-bg">
-                            <p class="font65">$10</p>
+                            <p class="font-price montserrat">$10</p>
                             <p>Per Month</p>
                         </div>
                         <div class="subtitle border-sub">
@@ -116,10 +115,10 @@
 
                     <div class="block-1">
                         <div class="table-title">
-                            <p class="table-title1">ADVANCED</p>
+                            <p class="table-title1 montserrat">ADVANCED</p>
                         </div>
                         <div class="price advan-bg">
-                            <p class="font65">$45</p>
+                            <p class="font-price montserrat">$45</p>
                             <p>Per Month</p>
                         </div>
                         <div class="subtitle border-sub">
@@ -143,11 +142,11 @@
                     <div class="block-1">
                         <div class="table-title">
                             <img class="new-icon" src="image/new-icon.png">
-                            <p class="table-title1">MASTER</p>
+                            <p class="table-title1 montserrat">MASTER</p>
                             <p class="senten">The best price/quanlity plan*</p>
                         </div>
                         <div class="price master-bg">
-                            <p class="font65">$249</p>
+                            <p class="font-price montserrat">$249</p>
                             <p>Per Month</p>
                         </div>                       
                          <div class="subtitle border-sub">
@@ -165,17 +164,17 @@
                             </ul>
                         </div>
                         <div class="table-button">
-                            <a class="button button-tyle1" href="#"><i class="fas fa-caret-right"></i> ORDER</a>
+                            <a class="button button-tyle1 montserrat" href="#"><i class="fas fa-caret-right"></i> ORDER</a>
                         </div>
                     </div>
 
 
                     <div class="block-1">
                         <div class="table-title">
-                            <p class="table-title1">INSANE</p>
+                            <p class="table-title1 montserrat">INSANE</p>
                         </div>
-                        <div class="price isane-bg">
-                            <p class="font65">$1399</p>
+                        <div class="price insane-bg">
+                            <p class="font-price montserrat">$1399</p>
                             <p>Per Month</p>
                         </div>
                         <div class="subtitle border-sub">
